<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offwhite"
    android:orientation="vertical"
    xmlns:foo="http://schemas.android.com/apk/res-auto">

    

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/offwhite"
    android:orientation="vertical"
    android:paddingBottom="10dp">
    
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <com.taher.qatifedu.utility.TextViewPlus
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/viewadv" 
      android:textColor="@color/darkorange"
      android:layout_gravity="center_horizontal"
      android:textSize="20dp"
      android:layout_marginTop="10dp"
       foo:customFont="advertisingbold.ttf"/>
    
     <View
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:background="@color/orange"/>
     
     </LinearLayout>
     
      <com.taher.qatifedu.utility.TextViewPlus
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/ourphone" 
      android:textColor="@color/black"
      android:layout_gravity="center_horizontal"
      android:textSize="20dp"
      android:layout_marginTop="20dp"
       foo:customFont="advertisingbold.ttf"/>
      
      
       <com.taher.qatifedu.utility.TextViewPlus
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/pressnumber" 
      android:textColor="@color/darkorange"
      android:layout_gravity="center_horizontal"
      android:textSize="12dp"
      android:layout_marginTop="-5dp"
       foo:customFont="advertisingbold.ttf"/>
       
       
       <Button
      android:id="@+id/btn_phone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/number" 
      android:textColor="@color/orange"
      android:layout_gravity="center_horizontal"
      android:textSize="22dp"
      android:layout_marginTop="5dp"
      android:paddingRight="20dp"
      android:paddingLeft="20dp"
      android:textStyle="bold"
      android:background="@drawable/rounded"/>
       
        <com.taher.qatifedu.utility.TextViewPlus
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/website" 
      android:textColor="@color/black"
      android:layout_gravity="center_horizontal"
      android:textSize="20dp"
      android:layout_marginTop="30dp"
       foo:customFont="advertisingbold.ttf"/>
      
      
       <com.taher.qatifedu.utility.TextViewPlus
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/presswebsite" 
      android:textColor="@color/darkorange"
      android:layout_gravity="center_horizontal"
      android:textSize="12dp"
       android:layout_marginTop="-5dp"
       foo:customFont="advertisingbold.ttf"/>
       
       
       <Button
      android:id="@+id/btn_website"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/emailurl" 
      android:textColor="@color/orange"
      android:layout_gravity="center_horizontal"
      android:textSize="22dp"
      android:layout_marginTop="5dp"
      android:paddingRight="20dp"
      android:paddingLeft="20dp"
      android:textStyle="bold"
      android:background="@drawable/rounded"/>
    
      
      
      <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginTop="20dp">
     
       <com.taher.qatifedu.utility.TextViewPlus
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/social" 
      android:textColor="@color/black"
      android:layout_gravity="center_horizontal"
      android:textSize="20dp"
       foo:customFont="advertisingbold.ttf"/>

    <com.taher.qatifedu.utility.TextViewPlus
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/pressicon" 
      android:textColor="@color/darkorange"
      android:layout_gravity="center_horizontal"
      android:textSize="18dp"
      android:layout_marginTop="-5dp"
      android:layout_marginBottom="10dp"
      foo:customFont="advertisingbold.ttf"/>
    
     <View
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:background="@color/orange"/>
     
     </LinearLayout>
          
          
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp">
        
         <RelativeLayout 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        
           <ImageButton
            android:id="@+id/btn_facebook"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/facebook"
            android:layout_centerInParent="true" />
        </RelativeLayout>
        
         
           <RelativeLayout 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
       >
        
           <ImageButton
            android:id="@+id/btn_telegram"
             android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/email" 
            android:layout_centerInParent="true"/>
        </RelativeLayout>
        
          <RelativeLayout 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        
           <ImageButton
            android:id="@+id/btn_snap"
             android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/snap"
            android:layout_centerInParent="true" />
        </RelativeLayout>
        
    </LinearLayout>
   
  <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp">
        
         <RelativeLayout 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        
           <ImageButton
            android:id="@+id/btn_twitter"
             android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/twitter"
            android:layout_centerInParent="true" />
        </RelativeLayout>
        
         
           <RelativeLayout 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        
           <ImageButton
            android:id="@+id/btn_instagram"
             android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/instagram" 
            android:layout_centerInParent="true"/>
        </RelativeLayout>
        
          <RelativeLayout 
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        
           <ImageButton
            android:id="@+id/btn_whatsapp"
              android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/whatsapp"
            android:layout_centerInParent="true" />
        </RelativeLayout>
        
    </LinearLayout>

</LinearLayout>
</ScrollView>