<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
     android:background="@color/offwhite"
       xmlns:custom="http://schemas.android.com/apk/res/com.taher.qatifedu" >





    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2" >

            <EditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1.7"
                android:background="@drawable/rounded"
                android:ems="10"
                android:gravity="right"
                android:padding="5dp" >

                <requestFocus />
            </EditText>

            <com.taher.qatifedu.utility.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="20sp"
                custom:fontAssetName="advertisingbold.ttf"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:weightSum="2"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.7"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded"
                android:ems="10"
                android:inputType="phone"
                android:gravity="right"
                android:padding="5dp" >
            </EditText>

            <com.taher.qatifedu.utility.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_marginRight="5dp"
                android:text="@string/mobile"
                android:textColor="#000000"
                android:textSize="20sp"
                custom:fontAssetName="advertisingbold.ttf"/>
        </LinearLayout>

         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2" >

            <EditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1.7"
                android:background="@drawable/rounded"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:gravity="right"
                android:padding="5dp" >

                <requestFocus />
            </EditText>

            <com.taher.qatifedu.utility.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                 android:layout_weight="0.3"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="20sp"
                custom:fontAssetName="advertisingbold.ttf" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/section_spinner"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:ems="10" />

            <com.taher.qatifedu.utility.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="0.14"
                android:text="@string/category"
                android:textColor="#000000"
                android:textSize="20sp"
                 custom:fontAssetName="advertisingbold.ttf"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/et_subject"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1.7"
                android:background="@drawable/rounded"
                android:ems="10"
                android:gravity="right"
                android:padding="5dp" >
            </EditText>

            <com.taher.qatifedu.utility.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="0.3"
                android:text="@string/subject"
                android:textColor="#000000"
                android:textSize="20sp"
                custom:fontAssetName="advertisingbold.ttf"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical" >

            <com.taher.qatifedu.utility.CustomTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="0.14"
                android:text="@string/body"
                android:layout_marginBottom="5dp"
                android:textColor="#000000"
                android:textSize="20sp"
                custom:fontAssetName="advertisingbold.ttf"/>

            <EditText
                android:id="@+id/et_body"
                android:layout_width="fill_parent"
                android:layout_height="180dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded"
                android:ems="10"
                android:gravity="top|right"
                android:padding="5dp"
                 android:textStyle="bold" >
            </EditText>
        </LinearLayout>

        <com.taher.qatifedu.utility.CustomTextView
            android:id="@+id/btn_send"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded"
            android:text="@string/send"
            android:gravity="center"
            custom:fontAssetName="advertisingbold.ttf"/>



    </LinearLayout>

</ScrollView>